unpackaged/objects/redwing__LMS_Permission_Rule__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <inlineHelpText>Optional description about this rule</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Field_API_Name__c</fullName>
        <description>User field API name</description>
        <externalId>true</externalId>
        <inlineHelpText>User object field API name</inlineHelpText>
        <label>Field API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Field_Value__c</fullName>
        <description>User object field expected value.</description>
        <inlineHelpText>User object field expected value. If using a regex you can test it at https://regex101.com/</inlineHelpText>
        <label>Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable/disable the execution of this rule.</description>
        <inlineHelpText>Enable/disable the execution of this rule.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Operator__c</fullName>
        <inlineHelpText>Operator used in this rule. IN and NOT IN expect a list of comma separated values</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
                <value>
                    <fullName>regex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LMS Permission Rule</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__Field_API_Name__c</columns>
        <columns>redwing__Operator__c</columns>
        <columns>redwing__Field_Value__c</columns>
        <columns>redwing__IsActive__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LMS Permission Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Permission Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>